added swagger docs for imageUpload API and changes file param to image in the API
